# AmiDiff

./: -lq  .gitignore  .gitmodules  .info  ADiffView  ADiffView.¶  ADiffView_debug  ADiffView_gcc  ADiffView_optBebbo  ADiffView_optSize  ADiffView_optSpeed  AmigaDiff  AmigaDiff.cpp  AmigaDiff.¶  AmigaDiffFacade.cpp  AmigaDiffFacade.h  AmigaDiff_oldAlgo  Application.cpp  Application.h  Diff  Diff.cpp  Diff.cpp.info  Diff.qiq.info  Diff.¶  Diff.¶.info  DiffFacade.cpp  DiffFacade.h  Makefile  Makefile.auto  README.md  oscottlibs.info  test_diskpart_exceptions.cpp  test_diskpart_no_exceptions.cpp  testfiles.info
amigautils/: AmigaFile.cpp  AmigaFile.h  AslFileRequest.cpp  AslFileRequest.h  DosFile.cpp  DosFile.h  StopWatch.cpp  StopWatch.hpp
commands/: CmdFileOpen.cpp  CmdFileOpen.h  CmdOpenFilesWindow.h  CmdOpenWindow.cpp  CmdOpenWindow.h  CmdPerformDiff.cpp  CmdPerformDiff.h  CmdQuit.cpp  CmdQuit.h  Command.cpp  Command.h  DiffDocument.cpp  DiffDocument.h
diffengine/: AmigaDiffFacade.h  (+12 more)
src/: ADiffView  ADiffView.¶  ADiffViewOptions.cpp  ADiffViewOptions.h  ADiffView_NoBgWorker  ADiffView_OS204  AmigaDiff  AmigaDiff.cpp  AmigaDiff.mdbi  AmigaDiff.¶  Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/amigautils/: AmigaFile.cpp  AmigaFile.h  AslFileRequest.cpp  AslFileRequest.h  LinkedListAmiga.cpp  LinkedListAmiga.h  MemoryPool.cpp  MessageBox.cpp  MessageBox.h  Request.cpp  Request.h  StopWatch.cpp  StopWatch.h
src/application/: ADiffViewArgs.cpp  ADiffViewArgs.h  ADiffViewArguments.cpp  ADiffViewArguments.h  ADiffViewPens.cpp  ADiffViewPens.h  ADiffViewPorts.cpp  ADiffViewPorts.h  ADiffViewSettings.cpp  ADiffViewSettings.h  ADiffView_rev.h  ADiffView_rev.i  Application.cpp  Application.h  DiffDocument.cpp  DiffDocument.h  DiffWorker.cpp  DiffWorker.h  TextFinder.cpp  TextFinder.h  main.cpp
src/commands/: CmdAbout.cpp  CmdAbout.h  CmdCloseWindow.cpp  CmdCloseWindow.h  CmdDiff.cpp  CmdDiff.h  CmdFileRequester.cpp  CmdFileRequester.h  CmdFindNext.cpp  CmdFindNext.h  CmdFindPrev.cpp  CmdFindPrev.h  CmdNavNextDiff.cpp  CmdNavNextDiff.h  CmdNavPrevDiff.cpp  CmdNavPrevDiff.h  CmdNavigateBase.cpp  CmdNavigateBase.h  CmdNavigateDiffBase.cpp  CmdNavigateDiffBase.h  CmdNavigateFirstDiff.cpp  CmdNavigateFirstDiff.h  CmdNavigateLastDiff.cpp  CmdNavigateLastDiff.h  CmdNavigateNextDiff.cpp  CmdNavigateNextDiff.h  CmdNavigatePrevDiff.cpp  CmdNavigatePrevDiff.h  CmdOpenWindow.cpp  CmdOpenWindow.h  CmdPerformDiff.cpp  CmdPerformDiff.h  CmdQuit.cpp  CmdQuit.h  CmdRequester.cpp  CmdRequester.h  CmdSearch.cpp  CmdSearch.h  Command.cpp  Command.h  (+4 more)
src/diffengine/: Box.cpp  Box.h  DiffEngine.cpp  DiffEngine.h  DiffEngineAmiga.cpp  DiffEngineAmiga.h  DiffFileAmiga.cpp  DiffFileAmiga.h  DiffFileBase.cpp  DiffFileBase.h  DiffFileLinux.cpp  DiffFileLinux.h  DiffFilePartition.cpp  DiffFilePartition.h  DiffFilePartitionAmiga.cpp  DiffFilePartitionAmiga.h  DiffFilePartitionLinux.cpp  DiffFilePartitionLinux.h  DiffInputFileAmiga.cpp  DiffInputFileAmiga.h  DiffInputFileBase.cpp  DiffInputFileBase.h  DiffInputFileLinux.cpp  DiffInputFileLinux.h  DiffLine.cpp  DiffLine.h  DiffOutputFileAmiga.cpp  DiffOutputFileAmiga.h  DiffOutputFileBase.cpp  DiffOutputFileBase.h  DiffOutputFileLinux.cpp  DiffOutputFileLinux.h  DiffTrace.cpp  DiffTrace.h  DiffTracer.cpp  DiffTracer.h  Pair.cpp  Pair.h  Point.cpp  Point.h  (+4 more)
src/diffengine-myers/: DiffEngine.cpp  DiffEngine.h  DiffFilePartition.cpp  DiffFilePartition.h  DiffFilePartitionLinux.cpp  DiffLine.h
src/diffengine-myers/test/: DiffEngineMyers_test.pro  DiffEngine_test.cpp
src/diffengine/test/: DiffEngine_test.cpp  DiffEngine_test.pro
src/diffengine/test_boost/: DiffEngine_test_boost.cpp  DiffEngine_test_boost.pro  ProgressReporter.h
src/diffengine/test_plain/: DiffEngine_test_plain.cpp  DiffEngine_test_plain.pro
src/gui/: ADiffViewPens.cpp  ADiffViewPens.h  AMenu.cpp  AMenu.h  AScreen.cpp  AScreen.h  AmigaDiffPens.cpp  AmigaDiffPens.h  AppMenu.cpp  AppMenu.h  AppScreen.cpp  AppScreen.h  ApplicationMenu.cpp  ApplicationMenu.h  ClonedWorkbenchScreen.cpp  ClonedWorkbenchScreen.h  DiffWindow.cpp  DiffWindow.h  FilesWindow.cpp  FilesWindow.h  JoinedPublicScreen.cpp  JoinedPublicScreen.h  MenuBase.cpp  MenuDiffWindow.h  MenuFilesWindow.cpp  OpenClonedWorkbenchScreen.cpp  OpenFilesWindow.cpp  OpenJoinedPublicScreen.cpp  OpenJoinedPublicScreen.h  OpenScreenBase.cpp  OpenScreenBase.h  ProgressWindow.cpp  ProgressWindow.h  ScreenBase.cpp  ScreenBase.h  ScrollbarWindow.cpp  ScrollbarWindow.h  TextWindow.cpp  TextWindow.h  WindowBase.cpp  (+1 more)
src/menus/: MenuBase.cpp  MenuBase.h  MenuDiffWindow.cpp  MenuDiffWindow.h  MenuFilesWindow.cpp  MenuSearchWindow.cpp  MenuSearchWindow.h
src/model/: AmigaDiffFacade.cpp  AmigaDiffFacade.h  DiffDocument.cpp  DiffDocument.h  Document.cpp  Document.h  MemoryPool.cpp  Rect.cpp  Rect.h  SelectedTextItem.cpp  SelectedTextItem.h  TextDocument.cpp  TextDocument.h  TextSelection.cpp  TextSelection.h  TextSelectionItem.cpp  TextSelectionItem.h
src/screen/: OpenClonedWorkbenchScreen.cpp  OpenJoinedPublicScreen.cpp  OpenScreenBase.cpp  OpenScreenBase.h
src/textsearch/: DiffFileSearchEngine.cpp  DiffFileSearchEngine.h  DiffFileSearchResult.cpp  DiffFileSearchResult.h  SearchConstants.h  SearchOptions.h
src/textselect/: TextSelection.cpp  TextSelection.h  TextSelectionBlock.cpp  TextSelectionBlock.h  TextSelectionItem.cpp  TextSelectionItem.h  TextSelectionLine.cpp  TextSelectionLine.h  TextSelectionRange.cpp  TextSelectionRange.h
src/thread/: BackgroundWorker.cpp  BackgroundWorker.h  ProgressReporter.h  WorkerProgressMsg.h  WorkerStartupMsg.h
src/windows/: DiffWindow.cpp  DiffWindow.h  DiffWindowRastports.cpp  DiffWindowRastports.h  DiffWindowTextArea.cpp  DiffWindowTextArea.h  FilesWindow.cpp  FilesWindow.h  ProgressWindow.cpp  ProgressWindow.h  ScrollbarWindow.cpp  ScrollbarWindow.h  SearchWindow.cpp  SearchWindow.h  WindowBase.cpp  WindowBase.h
src/worker/: DiffWorker.cpp  DiffWorker.h  DiffWorkerProgressReporter.cpp  DiffWorkerProgressReporter.h  ProgressReporter.cpp  ProgressReporter.h  WorkerBase.cpp  WorkerBase.h
(+112 files in other folders)
